# gmail-connector

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  Dockerfile  MANIFEST.in  README.md  __init__.py  gen_docs.sh  pyproject.toml  read_email.py  release_notes.rst  requirements.txt  send_email.py  send_sms.py  setup.cfg  setup.py  test.py  test_runner.py  version.py
.github/workflows/: docs.yml  markdown-validation.yml  markdown.yml  python-publish.yml
doc_generator/: conf.py  index.rst
docs/: README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: README.md.txt  index.rst.txt
gmailconnector/: __init__.py  encryption.py  models.py  options.py  read_email.py  responder.py  send_email.py  send_sms.py  sms_deleter.py  verify_email.py
gmailconnector/lib/: requirements.txt
gmailconnector/models/: config.py  options.py  responder.py
gmailconnector/validator/: __init__.py  address.py  domain.py  exceptions.py  port.py  support.py  validate_email.py
