[project]
name = "gmail-connector"
dynamic = ["version", "dependencies"]
description = "Python module to, send SMS, emails and read emails"
readme = "README.md"
authors = [{ name = "Vignesh Rao", email = "svignesh1793@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Email"
]
keywords = ["gmail", "smtp", "imap", "tls", "ssl"]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["gmailconnector"]

[tool.setuptools.dynamic]
version = {attr = "gmailconnector.version"}
dependencies = {file = ["gmailconnector/lib/requirements.txt"]}

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["sphinx==5.1.1", "pre-commit", "recommonmark", "gitverse"]

[project.urls]
Homepage = "https://github.com/thevickypedia/gmail-connector"
Docs = "https://thevickypedia.github.io/gmail-connector/"
Source = "https://github.com/thevickypedia/gmail-connector"
"Bug Tracker" = "https://github.com/thevickypedia/gmail-connector/issues"
"Release Notes" = "https://github.com/thevickypedia/gmail-connector/blob/main/release_notes.rst"
